--- a/aba-jsf2-webapp-v1/src/main/webapp/index.xhtml
+++ b/aba-jsf2-webapp-v1/src/main/webapp/index.xhtml
@@ -9,11 +9,18 @@
         	 
         	 <!-- Redinition de divbcontent du template.xhtml -->
         	 <ui:define name="content">
-	        	 <p>
-	        	 	 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu magna vitae sem convallis blandit. Quisque metus mi, euismod non aliquet sit amet, rhoncus vitae nulla. Suspendisse potenti. Donec in tellus dolor. Phasellus mattis, ipsum id gravida tempus, purus orci sagittis erat, at convallis erat nisl quis nisi. Mauris at felis orci, non luctus enim. Donec dignissim lacus non libero pellentesque gravida rhoncus ipsum ultricies.
-	                    Aenean at eros sed lacus elementum interdum. Nunc egestas quam sit amet erat gravida porta hendrerit non nibh. Quisque viverra ipsum ut justo euismod semper vehicula ante egestas. Suspendisse tortor nibh, vestibulum ut viverra sit amet, mattis vel neque. Ut hendrerit molestie est in imperdiet. Quisque lacinia rutrum magna, in vestibulum dui cursus in. Sed tristique malesuada metus, at pretium sem tincidunt in. Morbi ipsum felis, suscipit adipiscing ultricies eu, lobortis ac est. Fusce dapibus purus nibh, id ultrices magna.
-                     	n hac habitasse platea dictumst. Maecenas in nulla sed quam accumsan iaculis vel id lorem. Vivamus justo risus, congue sed facilisis tempor, gravida vitae elit. Nunc erat magna, gravida eget lacinia et, vestibulum quis erat. Proin consectetur porta sem nec porttitor. Curabitur in suscipit nunc. Pellentesque lectus lectus, condimentum et ornare eget, pretium eget justo. Maecenas pharetra, dolor ac hendrerit blandit, purus sem euismod augue, vitae facilisis lorem sapien a augue. Pellentesque ut elit purus. Nam id vehicula urna.
-	        	 </p>
+	        	 <f:view>          
+            <h:form id="form" target="_blank">
+                <h:outputLabel>Export Report</h:outputLabel>
+                <h:selectOneRadio value="#{reportsBean.exportOption}">
+                    <f:selectItem itemValue="PDF" itemLabel="PDF"/>
+                    <f:selectItem itemValue="HTML" itemLabel="HTML"/>
+                    <f:selectItem itemValue="EXCEL" itemLabel="EXCEL"/>
+                    <f:selectItem itemValue="RTF" itemLabel="RTF"/>
+                </h:selectOneRadio>
+                <h:commandButton  action="#{reportsBean.execute}" value="Get Report" />
+            </h:form>
+        </f:view>
         	 </ui:define>
         	 
         </ui:composition>
